Character images download refactor, enums refactor
