# src/main/java/com/rest_rpg/game/character/CharacterController.java
@@ -6,12 +6,9 @@ import org.openapitools.model.CharacterBasics;
 import org.openapitools.model.CharacterCreateRequest;
 import org.openapitools.model.CharacterDetails;
 import org.openapitools.model.CharacterLite;
-import org.springframework.core.io.Resource;
 import org.springframework.http.ResponseEntity;
 import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.RestController;
-
-import java.util.List;
 
 @RestController
 @RequiredArgsConstructor
@@ -23,21 +20,6 @@ public class CharacterController implements CharacterApi {
     @Override
     public ResponseEntity<CharacterLite> createCharacter(CharacterCreateRequest characterCreateRequest) {
         return ResponseEntity.ok(characterService.createCharacter(characterCreateRequest));
-    }
-
-    @Override
-    public ResponseEntity<Resource> getCharacterArtwork(String characterArtwork) {
-        return characterService.getCharacterFullArtwork(characterArtwork);
-    }
-
-    @Override
-    public ResponseEntity<List<String>> getCharacterArtworkEnum() {
-        return ResponseEntity.ok(characterService.getCharacterArtworkEnum());
-    }
-
-    @Override
-    public ResponseEntity<Resource> getCharacterArtworkThumbnail(String characterArtwork) {
-        return characterService.getCharacterThumbnailArtwork(characterArtwork);
     }
 
     @Override
